sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  val n = getNombreValeurs()
  var compteur = 0
  while (compteur < n) {
    if (!plusPetit(compteur,compteur+1) && !(compteur==0)) {
      echange(compteur,compteur+1)
      compteur -=1
      
    }
    else if (!plusPetit(compteur,compteur+1) && (compteur==0)) {
      echange(comtpeur,compteur+1)
    }
    else {
      compteur +=1
    }
  }
}